log
Thu, Apr 17, 2025  5:45:19 PM: 
 hashmap.c | 161 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 159 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
eeef3b7
Thu, Apr 17, 2025  5:46:03 PM: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  14|1
total_score: 60/70
d06e224
Thu, Apr 17, 2025  5:46:57 PM: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  16|1
total_score: 60/70
0c62f16
Thu, Apr 17, 2025  5:47:57 PM: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:228:12: error: 'true' undeclared (first use in this function)
     while (true) {
            ^~~~
hashmap.c:228:12: note: each undeclared identifier is reported only once for each function it appears in
f3ef708
Thu, Apr 17, 2025  5:48:13 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
3f98b0b
Thu, Apr 17, 2025  5:49:43 PM: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  16|1
total_score: 60/70
52876df
Thu, Apr 17, 2025  5:50:27 PM: 
 hashmap.c | 17 +++++++----------
 1 file changed, 7 insertions(+), 10 deletions(-)
 tests:  16|1
total_score: 60/70
c5e0cab
Thu, Apr 17, 2025  5:53:54 PM: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  14|1
total_score: 60/70
f0a4d5f
Thu, Apr 17, 2025  5:55:03 PM: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  16|1
total_score: 60/70
9c5893a
Thu, Apr 17, 2025  5:57:19 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
1efc5c3
Thu, Apr 17, 2025  8:50:22 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
589152a
Thu, Apr 17, 2025  8:53:12 PM: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  14|1
total_score: 60/70
1be20c3
Thu, Apr 17, 2025  8:55:35 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
755e8c6
Thu, Apr 17, 2025  8:56:12 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
203d17f
Thu, Apr 17, 2025  8:58:37 PM: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
4f57aeb
Thu, Apr 17, 2025  8:59:29 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
1610d05
Thu, Apr 17, 2025  9:01:28 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
decf7bf
Thu, Apr 17, 2025  9:03:12 PM: 
 hashmap.c | 18 +-----------------
 1 file changed, 1 insertion(+), 17 deletions(-)
 tests:  14|1
total_score: 60/70
eb8febe
Thu, Apr 17, 2025  9:07:45 PM: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
ee4f5ef
Thu, Apr 17, 2025  9:09:16 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
9a5790f
Thu, Apr 17, 2025  9:09:55 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|1
total_score: 60/70
98a0671
Thu, Apr 17, 2025  9:10:36 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:225:10: error: unused variable 'startPos' [-Werror=unused-variable]
     long startPos = (map->current + 1);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
7cb5366
Thu, Apr 17, 2025  9:10:56 PM: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  16|1
total_score: 60/70
a07c056
Thu, Apr 17, 2025  9:11:49 PM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
7a91b43
